# DA-LSTM-model

./: .env.example  .env.mlflow  .gitignore  Dockerfile  README.md  Snakefile  app.py  data_yandex.csv.dvc  docker-compose.yaml  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements.txt  tmp.dvc
.dvc/: config
data/interim/: .gitignore  data_first_handle.csv  data_with_hdb.csv
data/processed/: .gitignore  data_search.csv
data/raw/: .gitignore  data_yandex.csv  data_yandex.csv.dvc
docker/mlflow_image/: Dockerfile  requirements.txt
dvc_plots/: index.html
models/: __init__.py  attention_decoder.py  da_rnn_model.py
models/saved_model/: .gitignore
notebooks/: DA_RNN 1 волна  DA_RNN 2 волны  DA_RNN_1_волна.ipynb  DA_RNN_2_волны.ipynb  Оценка на тестовой выборке.ipynb  Оценка_на_тестовой_выборке.ipynb  Подбор гиперпараметров  Подбор_гиперпараметров.ipynb  Сравнение_результатов_всех_моделей.ipynb  Статистические модели  Статистические_модели.ipynb
reports/test_metric/: average_metric.csv  metric_all_window.csv
reports/validation_metric/: .gitignore  average_metric.csv  metric_all_window.csv
src/: __init__.py  config.py  func.py  window_generator.py
src/app/: app.py
src/data/: calculate_hdb.py  read_data.py
src/features/: __init__.py  get_freq_components.py  window_generator.py
src/models/: attention_decoder.py  attention_encoder.py  da_rnn_model.py  da_rnn_model_interval.py  da_rnn_model_one_point.py  evaluate_test.py  evaluate_validation.py  predict_model.py  train_model.py
src/visualization/: __init__.py  calculate_metrics.py  plot_hdb.py  plot_test_window.py  plot_window.py
src/window_generators/: window_generator.py  window_generator_all_features.py  window_generator_interval.py
tmp/: checkpoint.data-00000-of-00001  checkpoint.index
(+2 files in other folders)
