[tool.poetry]
name = "da-lstm-model"
version = "0.1.0"
description = "Result of master thesis"
authors = ["AlexeyKurlevsky <kurlevsky@gmail.com>"]
readme = "README.md"
packages = [{include = "da_lstm_model"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
tensorflow = "2.11.0"
numpy = "1.23.5"
pandas = "1.1.3"
matplotlib = "3.3.2"
keras = "2.11.0"
scikit-learn = "^0.24"
snakemake = "^7.26.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
