[tool.poetry]
name = "da-lstm-model"
version = "0.1.0"
description = "Result of master thesis"
authors = ["AlexeyKurlevsky <kurlevsky@gmail.com>"]
readme = "README.md"
packages = [{include = "da_lstm_model"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
numpy = "1.23.5"
pandas = "1.1.3"
matplotlib = "3.3.2"
scikit-learn = "^0.24"
black = "^23.3.0"
dvc = "^3.4.0"
dvc-gdrive = "^2.20.0"
mlflow = "^2.4.2"
tensorflow = "^2.13.0"
python-dotenv = "^1.0.0"
boto3 = "^1.28.33"
psycopg2 = "^2.9.7"
flask = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
