[tool.poetry]
name = "da-lstm-model"
version = "0.1.0"
description = ""
authors = ["AlexeyKurlevsky <kurlevsky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
numpy = "^1.25.2"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"
black = "^23.7.0"
dvc = "^3.16.0"
dvc-gdrive = "^2.20.0"
mlflow = "^2.6.0"
tensorflow = "^2.13.0"
python-dotenv = "^1.0.0"
boto3 = "^1.28.35"
psycopg2 = "^2.9.7"
flask = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
